fix horizontal scrolling bug

--- a/theme/sass/base.scss
+++ b/theme/sass/base.scss
@@ -4,6 +4,7 @@
 }
 
 body {
+  overflow-x: hidden;
   background-color: $page-background;
   color: $font-color;
   font-family: $font-primary;
